--- a/ts-react-master/4.반응속도체크/package.json
+++ b/ts-react-master/4.반응속도체크/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "response-check",
+  "name": "gugudan",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --hot"
   },
-  "author": "ZeroCho",
-  "license": "ISC",
+  "author": "hyoni",
+  "license": "MIT",
   "dependencies": {
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
@@ -17,9 +17,8 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
-    "react-hot-loader": "^4.8.3",
-    "webpack": "^4.29.6",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
