--- a/ts-react-master/lecture/package.json
+++ b/ts-react-master/lecture/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack"
+    "dev": "webpack-dev-server --hot"
   },
   "author": "hyoni",
   "license": "MIT",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
