--- a/ts-react-master/mobx-react/package.json
+++ b/ts-react-master/mobx-react/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --hot"
   },
-  "author": "",
+  "author": "hyoni",
   "license": "ISC",
   "dependencies": {
     "@types/react": "^16.9.19",
